--- a/Sample/SampleApp.Droid/Resources/layout/MainLayout.axml
+++ b/Sample/SampleApp.Droid/Resources/layout/MainLayout.axml
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 	<Button
         android:id="@+id/button_launch_cobrowse"
 		android:text="Launch Cobrowse.io"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center" />
-</FrameLayout>
+		android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/button_check_cobrowse_full_device"
+        android:text="Check Full-Device Control\nconfiguration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
