--- a/SampleForms/SampleApp.Forms/LoginPage.xaml
+++ b/SampleForms/SampleApp.Forms/LoginPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:effects="clr-namespace:SampleApp.Forms"
     xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
     x:Class="SampleApp.Forms.LoginPage"
     ios:Page.UseSafeArea="true"
@@ -30,7 +31,11 @@
             Grid.Column="0"
             Grid.ColumnSpan="2"
             IsPassword="True"
-            Placeholder="Password" />
+            Placeholder="Password">
+            <Entry.Effects>
+                <effects:CobrowseRedactedViewEffect />
+            </Entry.Effects>
+        </Entry>
         <Button
             Grid.Row="3"
             Grid.Column="1"
