--- a/Sample/SampleApp.iOS/Main.storyboard
+++ b/Sample/SampleApp.iOS/Main.storyboard
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="219">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="219">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,35 +16,49 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gG-oc-KTd">
-                                <rect key="frame" x="97" y="269" width="127" height="30"/>
+                                <rect key="frame" x="143.5" y="78" width="127" height="30"/>
                                 <state key="normal" title="Open Cobrowse.io"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3t-3y-cyL">
+                                <rect key="frame" x="90" y="116" width="234" height="30"/>
+                                <state key="normal" title="Open screen with Redacted Views"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AVg-eO-zsn">
+                                <rect key="frame" x="111.5" y="154" width="191" height="30"/>
+                                <state key="normal" title="Show Cobrowse.io DeviceId"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="9gG-oc-KTd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="AlV-26-OC4"/>
+                            <constraint firstItem="k3t-3y-cyL" firstAttribute="top" secondItem="9gG-oc-KTd" secondAttribute="bottom" constant="8" id="Jod-Rz-COt"/>
+                            <constraint firstItem="AVg-eO-zsn" firstAttribute="top" secondItem="k3t-3y-cyL" secondAttribute="bottom" constant="8" id="PRh-Pg-Cw5"/>
+                            <constraint firstItem="AVg-eO-zsn" firstAttribute="centerX" secondItem="k3t-3y-cyL" secondAttribute="centerX" id="Tio-8u-jZL"/>
+                            <constraint firstItem="k3t-3y-cyL" firstAttribute="centerX" secondItem="9gG-oc-KTd" secondAttribute="centerX" id="Ydw-2t-blD"/>
+                            <constraint firstItem="9gG-oc-KTd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Z2X-aG-3WT"/>
                             <constraint firstItem="9gG-oc-KTd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ngu-W7-Ct7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Cobrowse.io SDK Xamarin.iOS" id="558"/>
                     <connections>
                         <outlet property="buttonCobrowse" destination="9gG-oc-KTd" id="name-outlet-9gG-oc-KTd"/>
+                        <outlet property="buttonRedactedViews" destination="k3t-3y-cyL" id="name-outlet-k3t-3y-cyL"/>
+                        <outlet property="buttonDeviceId" destination="AVg-eO-zsn" id="name-outlet-AVg-eO-zsn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="410" y="641"/>
+            <point key="canvasLocation" x="827" y="641"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="218">
             <objects>
                 <navigationController id="219" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="221">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
