Fix native crash on the custom 6-digits code page.
SampleApp.Forms.iOS[8370:2884893] error: * Assertion at /Users/builder/jenkins/workspace/archive-mono/2019-10/ios/release/mono/mini/interp/interp.c:2107, condition `is_ok (error)' not met, function:do_jit_call, Attempting to JIT compile method '(wrapper other) void object:gsharedvt_out_sig (object&,double&,intptr)' while running in aot-only mode. See https://docs.microsoft.com/xamarin/ios/internals/limitations for more information.
 assembly:<unknown assembly> type:<unknown type> member:(null)

--- a/SampleForms/SampleApp.Forms/CobrowseCustomPage.xaml
+++ b/SampleForms/SampleApp.Forms/CobrowseCustomPage.xaml
@@ -34,6 +34,7 @@
                 HorizontalTextAlignment="Center" />
             <ActivityIndicator
                 x:Name="viewCodeDiplayWorking"
+                Color="Black"
                 IsRunning="True"
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
