chore: make the SDK not depend on MAUI

--- a/Sample/MauiSample/MainPage.xaml
+++ b/Sample/MauiSample/MainPage.xaml
@@ -16,15 +16,14 @@
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Hello, World!"
+                Text="Cobrowse.io SDK"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Welcome to .NET Multi-platform App UI"
+                Text="This label is redacted"
                 SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
                 FontSize="18"
                 HorizontalOptions="Center" />
 
