--- a/Sample/MauiSample/MainPage.xaml
+++ b/Sample/MauiSample/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:MauiSample"
              x:Class="MauiSample.MainPage">
 
     <ScrollView>
@@ -25,7 +26,11 @@
                 Text="This label is redacted"
                 SemanticProperties.HeadingLevel="Level2"
                 FontSize="18"
-                HorizontalOptions="Center" />
+                HorizontalOptions="Center">
+                <Label.Effects>
+                    <local:CobrowseRedactedViewEffect />
+                </Label.Effects>
+            </Label>
 
             <Button
                 Text="Open Cobrowse.io"
